<resources>
    <string name="app_name">MP2DanielFornari</string>
    <string name="ButtonScore">+1 Point</string>
    <string name="TeamALabel">Team B</string>
    <string name="TeamBLabel">Team A</string>
    <string name="WinnerLabelText">Winner</string>
    <string name="StartingScore">0</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="main_background">main_background</string>
    <string name="winner_background">winner_background</string>
    <string name="text_name">text_name</string>
    <string name="text_name2">text_name2</string>
</resources>
