<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:id="@+id/layoutObject"
    >

    <TextView
        android:id="@+id/ScoreBoardA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="199dp"
        android:layout_marginLeft="199dp"
        android:layout_marginTop="116dp"
        android:background="@color/colorPrimary"
        android:text="@string/StartingScore"
        android:textColor="#F1EDED"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/TeamAbutton"
        android:layout_width="401dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:text="@string/ButtonScore" />

    <Button
        android:id="@+id/TeamBbutton"
        android:layout_width="401dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="8dp"
        android:text="@string/ButtonScore" />

    <TextView
        android:id="@+id/TeamALabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="107dp"
        android:layout_marginBottom="205dp"
        android:background="@color/colorPrimary"
        android:text="@string/TeamALabel"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/TeamBLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="193dp"
        android:background="@color/colorPrimary"
        android:text="@string/TeamBLabel"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/ScoreBoardB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="122dp"
        android:background="@color/colorPrimary"
        android:text="@string/StartingScore"
        android:textColor="@android:color/white"
        android:textSize="30sp" />

</RelativeLayout>